cleanup-and-minor-changes