@@ -3,12 +3,12 @@ package pl.jakubrostowski.githubapitask.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import pl.jakubrostowski.githubapitask.client.GithubClient;
-import pl.jakubrostowski.githubapitask.dto.GithubResponseDto;
+import pl.jakubrostowski.githubapitask.dto.BranchDto;
+import pl.jakubrostowski.githubapitask.dto.response.ResponseDto;
 import pl.jakubrostowski.githubapitask.dto.RepositoryDto;
 import pl.jakubrostowski.githubapitask.mapper.GithubMapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,15 +16,20 @@ public class GithubService {
 
     private final GithubClient githubClient;
 
-    public List<GithubResponseDto> getUserRepositories(String username) {
-        List<RepositoryDto> repositories =  githubClient.getRepositoryInfo(username);
+    public List<ResponseDto> getUserRepositories(String username) {
+        List<RepositoryDto> repositories =  githubClient.getRepositoryListByUser(username);
 
-        for (RepositoryDto dto : repositories) {
-            dto.setBranch(githubClient.getBranchInfo(dto.getOwner().getLogin(), dto.getRepositoryName()));
+        List<RepositoryDto> filteredRepositories = repositories.stream()
+                .filter(repo -> !repo.isFork())
+                .toList();
+
+        for (RepositoryDto dto : filteredRepositories) {
+            List<BranchDto> branches = githubClient.getBranchInfo(dto.getOwner().getLogin(), dto.getRepositoryName());
+            dto.setBranches(branches);
         }
 
         return repositories.stream()
                 .map(GithubMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
